# Embedded_Project

Embedded/: CMakeLists.txt  README.md
Embedded/src/: CMakeLists.txt  DS18B20.c  DS18B20.h  buzzer.c  buzzer.h  fan.c  fan.h  main.c  pump.c  pump.h  ultrasonic.c  ultrasonic.h  waterLevel.c  waterLevel.h
